20121012 - fhabermann
* added firebug profiler for database
* jquery update to 1.8.2
* added first file upload form

20121011 - fhabermann
* added guest user to dump
* fixed problem with guest user and page and content class
* removed old reference to js file
* added install instructions

20121009 - fhabermann
* added demo dump for postgresql
* added new database dumps
* set and renamed functions for knowledgeroot classes

20120917 - fhabermann
* updated license to BSD license
* removed all old unused stuff
* started new changelog