@@ -54,12 +54,14 @@ $config = Zend_Registry::get('config');
 	<script src="js/bootstrap.min.js"></script>
 
 	<!-- load the dojo toolkit base -->
-	<script src="http://ajax.googleapis.com/ajax/libs/dojo/1.8.0/dojo/dojo.js"
+	<script src="http://ajax.googleapis.com/ajax/libs/dojo/1.7.2/dojo/dojo.js"
 		djConfig="parseOnLoad: false, async:true">
 	</script>
 
+
+
 	<style type="text/css">
-	    @import "http://ajax.googleapis.com/ajax/libs/dojo/1.8.0/dijit/themes/claro/claro.css";
+	    @import "http://ajax.googleapis.com/ajax/libs/dojo/1.7.2/dijit/themes/claro/claro.css";
 	</style>
     </head>
 
